--- a/style.css
+++ b/style.css
@@ -76,10 +76,30 @@ html {
 
 body {
   overflow-x: hidden;
-  background-color: #4d4d4d;
+  background-color: var(--sub-color-3);
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+:root{
+	--base-color-1: rgb(76, 99, 139);
+	--base-color-2: rgb(224, 42, 117);
+
+	--sub-color-1: rgb(255, 255, 255);
+	--sub-color-2: rgb(45, 62, 80);
+	--sub-color-3: rgb(186, 217, 248);
+
+	--accent-color-1: rgb(255, 166, 0);
+	--accent-color-2: rgb(10, 48, 40);
+	--indent-gap: 3rem;
+
+	/* Fonts */
+	--sub-fz: calc(0.6rem + ((1vw + 1vh) * 0.2));
+	--base-fz: calc(1rem + ((1vw + 1vh) * 0.2));
+	--head-fz: calc(1.4rem + ((1vw + 1vh) * 0.2));
+}
+
 
 .wrapper {
   display: flex;
@@ -102,70 +122,36 @@ body {
   position: relative;
   max-width: 33.333%;
   width: auto;
-  min-width: 10rem;
+  min-width: 10em;
   height: auto;
-  background-color: white;
-  border: 0.2rem solid rgb(168, 0, 0);
-  border-radius: 2rem;
-  padding: 1rem;
+  background-color: var(--sub-color-1);
+  border: 0.2em solid var(--base-color-2);
+  border-radius: 2em;
+  padding: 1em;
 }
 
-.card-header {
+.card-body {
   display: flex;
   flex-direction: column;
   position: relative;
+  border-radius: 2em;
+  overflow: hidden;
+  border: 0.2em solid var(--accent-color-2);
 }
 
 .user-img {
   -o-object-fit: cover;
   object-fit: cover;
-  border-radius: 2rem 2rem 0 0;
 }
 
-.user-info,
-.user-contacts {
-  display: flex;
-  flex-direction: column;
-  line-height: 120%;
-}
-
-.card-body {
-  font-size: 1.2rem;
-}
-
-.btn-info-bio {
-  display: grid;
-  place-items: center;
-  padding: 0.2rem;
-  border: 0.2rem solid rgb(133, 0, 0);
-  border-radius: 50%;
-  right: 0;
-  top: 0;
-  position: absolute;
-}
-
-.btn-info-bio > svg {
-  width: 1.5rem;
-  height: 1.5rem;
-}
-
-.btn-info__career,
-.btn-info__contacts {
-  color: rgb(255, 255, 255);
-  border: 0.2rem solid rgb(168, 0, 0);
-  margin: 1rem auto;
-  border-radius: 1rem;
-  padding: 0.5rem 1rem;
-  background-color: rgb(53, 49, 61);
-}
-
-.user-fullname {
-  color: rgb(255, 255, 255);
-  font-size: 1rem;
+.user-fullname,
+.user-career {
+  color: var(--accent-color-1);
+  font-size: 1em;
   font-weight: 600;
   text-align: center;
   line-height: 150%;
-  background-color: rgb(53, 49, 61);
+  background-color: var(--sub-color-2);
 }
 
 .sample {
